# golfer

./: CMakeCache.txt  CMakeLists.txt  Findlog4cpp.cmake  Makefile  cmake_install.cmake  nonConflict_search.sh  nonConflict_search_2.sh  sgp  sgp_parser.py
matrices/: optimized_M_18_42_kirkman.txt  optimized_M_18_42_social_golfer.txt  optimized_M_21_63_kirkman.txt  optimized_M_21_63_social_golfer.txt  optimized_M_24_80_kirkman.txt  optimized_M_24_80_social_golfer.txt  optimized_M_27_99_social_golfer.txt  optimized_M_30_120_social_golfer.txt  optimized_M_33_154_social_golfer.txt  optimized_M_36_180_social_golfer.txt  optimized_M_39_208_social_golfer.txt  optimized_M_42_238_social_golfer.txt  optimized_M_45_285_social_golfer.txt  optimized_M_63_546_social_golfer.txt  optimized_M_93_961_kirkman.txt  optimized_M_93_961_social_golfer.txt  rename.py
outputs_dir/: sgp_10_3_12.txt  sgp_11_3_14.txt  sgp_12_3_15.txt  sgp_13_3_16.txt  sgp_14_3_17.txt  sgp_15_3_19.txt  sgp_16_3_20.txt  sgp_17_3_21.txt  sgp_18_3_23.txt  sgp_19_3_23.txt  sgp_20_3_25.txt  sgp_21_3_26.txt  sgp_22_3_27.txt  sgp_23_3_29.txt  sgp_24_3_30.txt  sgp_25_3_32.txt  sgp_26_3_33.txt  sgp_27_3_34.txt  sgp_28_3_36.txt  sgp_29_3_36.txt  sgp_30_3_38.txt  sgp_31_3_31.txt  sgp_31_3_40.txt  sgp_6_3_7.txt  sgp_7_3_9.txt  sgp_8_3_10.txt  sgp_9_3_11.txt
outputs_dir/18/: log_6_3_4.txt  log_6_3_6.txt  log_6_3_7.txt
outputs_dir/21/: log_7_3_5.txt  log_7_3_7.txt  log_7_3_8.txt  log_7_3_9.txt
outputs_dir/24/: log_8_3_10.txt  log_8_3_6.txt  log_8_3_8.txt  log_8_3_9.txt
outputs_dir/27/: log_9_3_10.txt  (+3 more)
src/: main.cpp
(+106 files in other folders)
